Using the eating habit quick select on the details page now as well

--- a/src/main/resources/static/resources/css/style.css
+++ b/src/main/resources/static/resources/css/style.css
@@ -158,6 +158,11 @@ fieldset.inline-options label {
     content: " \e080";
 }
 
+.no-decoration {
+    text-decoration: none;
+    font-weight: normal;
+}
+
 #main-footer {
 	position: absolute;
 	bottom: 0;
