--- a/src/main/resources/templates/personDetails.html
+++ b/src/main/resources/templates/personDetails.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="../static/resources/css/bootstrap.min.css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
 
     <link rel="stylesheet" type="text/css" href="../static/resources/css/style.css" th:href="@{/resources/css/style.css}"/>
+    <link rel="stylesheet" type="text/css" href="../static/resources/css/animation.css" th:href="@{/resources/css/animation.css}"/>
 
     <script type="text/javascript" src="../static/resources/js/list.min.js" th:src="@{/resources/js/list.min.js}"></script>
     <script type="text/javascript" src="../static/resources/js/list.fuzzysearch.min.js" th:src="@{/resources/js/list.fuzzysearch.min.js}"></script>
@@ -142,8 +143,17 @@
                       <div class="form-group">
                           <label for="eatingHabit" class="col-sm-3 control-label">Ernährung</label>
                           <div class="col-sm-9">
-                              <textarea class="form-control" name="eatingHabit" id="eatingHabit"
-                                  placeholder="Essgewohnheiten (vegetarisch, Unverträglichkeiten...)" th:field="*{eatingHabit}"></textarea>
+                              <div class="margin-btm">
+                                  <label class="no-decoration" style="vertical-align: sub;">Schnellauswahl:</label>
+                                  <select id="eatingHabit-quick" class="selectpicker" data-width="auto">
+                                      <option value="">keine</option>
+                                      <option value="vegetarisch">vegetarisch</option>
+                                      <option value="vegan">vegan</option>
+                                  </select>
+                              </div>
+                              <div>
+                                  <textarea class="form-control" name="eatingHabit" id="eatingHabit" placeholder="Essgewohnheiten (vegetarisch, Unverträglichkeiten...)" th:field="*{eatingHabit}"></textarea>
+                              </div>
                           </div>
                       </div>
                       <div class="form-group">
