--- a/src/main/resources/templates/persons.html
+++ b/src/main/resources/templates/persons.html
@@ -102,7 +102,7 @@
                         <div class="form-group">
                             <label for="email" class="col-sm-3 control-label">E-Mail</label>
                             <div class="col-sm-9">
-                                <input type="email" id="email" class="form-control" name="email" placeholder="E-Mail" required="required" th:field="*{email}" />
+                                <input type="email" id="email" class="form-control" name="email" placeholder="E-Mail" th:field="*{email}" />
                             </div>
                         </div>
                         <div class="form-group">
@@ -178,7 +178,7 @@
                                 <span class="glyphicon glyphicon-info-sign" data-toggle="tooltip" data-placement="right" data-title="Schwimmerlaubnis o.ä."></span>
                             </label>
                             <div class="col-sm-9">
-                                <textarea class="form-control" name="remarks" id="remarks" placeholder="Bemerkungen (Schwimmerlaubnis ...)" th:field="*{remarks}"></textarea>
+                                <textarea class="form-control" name="remarks" id="remarks" placeholder="Bemerkungen (Schwimmerlaubnis ...)" th:field="*{remarks}" maxlength="512"></textarea>
                             </div>
                         </div>
                         <div class="form-group">
