--- a/src/main/resources/templates/eventPrint.html
+++ b/src/main/resources/templates/eventPrint.html
@@ -163,8 +163,8 @@
                         </td>
                         <td th:text="${counselor.phoneNumber}">0987 65432109</td>
                         <td>
-                            <span th:if="${counselor.activist} AND ${counselor.getActivistProfile().hasJuleica()}" class="glyphicon glyphicon-ok text-success"></span>
-                            <span th:unless="${counselor.activist} AND ${counselor.getActivistProfile().hasJuleica()}" class="glyphicon glyphicon-remove text-danger"></span>
+                            <span th:if="${counselor.activist} AND ${counselor.getActivistProfile().hasValidJuleica()}" class="glyphicon glyphicon-ok text-success"></span>
+                            <span th:unless="${counselor.activist} AND ${counselor.getActivistProfile().hasValidJuleica()}" class="glyphicon glyphicon-remove text-danger"></span>
                         </td>
                     </tr>
                     <tr>
