--- a/src/main/resources/templates/eventPrint.html
+++ b/src/main/resources/templates/eventPrint.html
@@ -43,7 +43,7 @@
                         <td th:text="${participant.participantProfile.healthImpairments}">Heuschnupfen</td>
                         <td th:text="${participant.phoneNumber}">0123 4567890</td>
                         <td th:text="${participant.address.city}">Freital</td>
-                        <td class="text-center">dd.MM.yyyy HH:mm
+                        <td class="text-center">
                             <span th:if="${event.getParticipationInfo(participant).isParticipationFeePayed()}"><span class="hidden">ja</span><span class="glyphicon glyphicon-ok text-success"></span></span>
                             <span th:unless="${event.getParticipationInfo(participant).isParticipationFeePayed()}"><span class="hidden">nein</span><span class="glyphicon glyphicon-remove text-danger"></span></span>
                         </td>
