Adding message for searches that did not return any results

--- a/src/main/resources/templates/eventDetails.html
+++ b/src/main/resources/templates/eventDetails.html
@@ -233,6 +233,9 @@
                           </tbody>
                       </table>
                   </form>
+                  <div class="alert alert-info no-results">
+                      Keine Übereinstimmung
+                  </div>
               </section>
               <footer class="modal-footer">
                   <button type="button" class="btn btn-default" data-dismiss="modal">Abbrechen</button>
@@ -307,6 +310,9 @@
                           </tbody>
                       </table>
                   </form>
+                  <div class="alert alert-info no-results">
+                      Keine Übereinstimmung
+                  </div>
               </section>
               <footer class="modal-footer">
                   <button type="button" class="btn btn-default" data-dismiss="modal">Abbrechen</button>
@@ -381,6 +387,9 @@
                           </tbody>
                       </table>
                   </form>
+                  <div class="alert alert-info no-results">
+                      Keine Übereinstimmung
+                  </div>
               </section>
               <footer class="modal-footer">
                   <button type="button" class="btn btn-default" data-dismiss="modal">Abbrechen</button>
@@ -587,6 +596,9 @@
                           </div>
                       </div>
                   </form>
+                  <div class="alert alert-info no-results">
+                      Keine Übereinstimmung
+                  </div>
               </section>
               <footer class="modal-footer">
                   <button type="button" class="btn btn-default" data-dismiss="modal">Abbrechen</button>
@@ -596,6 +608,7 @@
       </div>
   </section>
 
+  <!-- 'edit person to contact' modal -->
   <section class="modal fade" id="edit-personToContact-modal" tabindex="-1" role="dialog" aria-lablledby="edit-personToContact-label">
       <div class="modal-dialog" role="document">
           <div class="modal-content">
