--- a/src/main/resources/templates/localGroupDetails.html
+++ b/src/main/resources/templates/localGroupDetails.html
@@ -199,6 +199,9 @@
                           </tbody>
                       </table>
                   </form>
+                  <div class="alert alert-info no-results">
+                      Keine Übereinstimmung
+                  </div>
               </section>
               <footer class="modal-footer">
                   <button type="button" class="btn btn-default" data-dismiss="modal">Abbrechen</button>
