--- a/src/main/resources/templates/eventDetails.html
+++ b/src/main/resources/templates/eventDetails.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="../static/resources/css/bootstrap.min.css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
 
     <link rel="stylesheet" type="text/css" href="../static/resources/css/style.css" th:href="@{/resources/css/style.css}"/>
+    <link rel="stylesheet" type="text/css" href="../static/resources/css/animation.css" th:href="@{/resources/css/animation.css}"/>
 
     <script type="text/javascript" src="../static/resources/js/list.min.js" th:src="@{/resources/js/list.min.js}"></script>
     <script type="text/javascript" src="../static/resources/js/list.fuzzysearch.min.js" th:src="@{/resources/js/list.fuzzysearch.min.js}"></script>
@@ -233,6 +234,9 @@
                           </tbody>
                       </table>
                   </form>
+                  <div class="text-center searching">
+                      Suche läuft... <span class="glyphicon glyphicon-refresh glyphicon-load-animate"></span>
+                  </div>
                   <div class="alert alert-info no-results">
                       Keine Übereinstimmung
                   </div>
@@ -310,6 +314,9 @@
                           </tbody>
                       </table>
                   </form>
+                  <div class="text-center searching">
+                      Suche läuft... <span class="glyphicon glyphicon-refresh glyphicon-load-animate"></span>
+                  </div>
                   <div class="alert alert-info no-results">
                       Keine Übereinstimmung
                   </div>
@@ -387,6 +394,9 @@
                           </tbody>
                       </table>
                   </form>
+                  <div class="text-center searching">
+                      Suche läuft... <span class="glyphicon glyphicon-refresh glyphicon-load-animate"></span>
+                  </div>
                   <div class="alert alert-info no-results">
                       Keine Übereinstimmung
                   </div>
@@ -596,6 +606,9 @@
                           </div>
                       </div>
                   </form>
+                  <div class="text-center searching">
+                      Suche läuft... <span class="glyphicon glyphicon-refresh glyphicon-load-animate"></span>
+                  </div>
                   <div class="alert alert-info no-results">
                       Keine Übereinstimmung
                   </div>
@@ -845,7 +858,7 @@
                         <tr class="row">
                             <th class="col-sm-2"><span class="glyphicon glyphicon-map-marker"></span> Ort:</th>
                             <td class="col-sm-10">
-                                <a target="_blank" href="http://www.openstreetmap.org/search?query=Bahnhofstraße%2018%2001994%20Annahütte" th:href="@{http://www.openstreetmap.org/search(query=|${event.place.street} ${event.place.zip} ${event.place.city}|)}" th:text="|${event.place.street} ${event.place.zip} ${event.place.city}|">Bahnhofstraße 18 01994 Annahütte</a>
+                                <a target="_blank" href="http://www.openstreetmap.org/search?query=Bahnhofstraße%2018%2001994%20Annahütte" th:href="@{http://www.openstreetmap.org/search(query=|${event.place.street} ${event.place.zip} ${event.place.city}|)}" th:text="${{#cstStrings.join(event.getPlace().getStreet(), event.getPlace().getZip(), event.getPlace().getCity())}}">Bahnhofstraße 18 01994 Annahütte</a>
                             </td>
                         </tr>
                         <tr class="row">
