--- a/src/main/resources/templates/projectDetails.html
+++ b/src/main/resources/templates/projectDetails.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="../static/resources/css/bootstrap.min.css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
 
     <link rel="stylesheet" type="text/css" href="../static/resources/css/style.css" th:href="@{/resources/css/style.css}"/>
+    <link rel="stylesheet" type="text/css" href="../static/resources/css/animation.css" th:href="@{/resources/css/animation.css}"/>
 
     <script type="text/javascript" src="../static/resources/js/list.min.js" th:src="@{/resources/js/list.min.js}"></script>
     <script type="text/javascript" src="../static/resources/js/list.fuzzysearch.min.js" th:src="@{/resources/js/list.fuzzysearch.min.js}"></script>
@@ -194,6 +195,9 @@
                           </tbody>
                       </table>
                   </form>
+                  <div class="text-center searching">
+                      Suche läuft... <span class="glyphicon glyphicon-refresh glyphicon-load-animate"></span>
+                  </div>
                   <div class="alert alert-info no-results">
                       Keine Übereinstimmung
                   </div>
@@ -537,7 +541,6 @@
 
     </script>
     <input type="hidden" id="local-group-id" value="-1" th:value="${project.localGroup.id}" />
-
 
 </main>
 
