Tiny refinement of forms

--- a/src/main/resources/templates/personDetails.html
+++ b/src/main/resources/templates/personDetails.html
@@ -146,7 +146,7 @@
                               <div class="margin-btm">
                                   <label class="no-decoration" style="vertical-align: sub;">Schnellauswahl:</label>
                                   <select id="eatingHabit-quick" class="selectpicker" data-width="auto">
-                                      <option value="">keine</option>
+                                      <option value="">konventionell</option>
                                       <option value="vegetarisch">vegetarisch</option>
                                       <option value="vegan">vegan</option>
                                   </select>
