--- a/src/main/resources/templates/persons.html
+++ b/src/main/resources/templates/persons.html
@@ -148,7 +148,7 @@
                             <div class="col-sm-9">
                                 <div class="margin-btm">
                                     <select id="eatingHabit-quick" class="selectpicker" data-width="auto">
-                                        <option value="" selected="selected">keine</option>
+                                        <option value="" selected="selected">koventionell</option>
                                         <option value="vegetarisch">vegetarisch</option>
                                         <option value="vegan">vegan</option>
                                     </select>
