Refining the search function
A status and result message are being dispayed now

--- a/src/main/resources/templates/personDetails.html
+++ b/src/main/resources/templates/personDetails.html
@@ -448,6 +448,12 @@
                                         </tbody>
                                     </table>
                                 </form>
+                                <div class="text-center searching">
+                                    Suche läuft... <span class="glyphicon glyphicon-refresh glyphicon-load-animate"></span>
+                                </div>
+                                <div class="alert alert-info no-results">
+                                    Keine Übereinstimmung
+                                </div>
                             </div>
                         </div>
                     </div>
