--- a/src/main/resources/templates/personDetails.html
+++ b/src/main/resources/templates/personDetails.html
@@ -232,20 +232,38 @@
                              </div>
                          </div>
                      </div>
-                     <div class="form-group" id="edit-activist-juleica-container">
-                         <label class="col-sm-2 control-label">JuLeiCa</label>
-                         <div class="col-sm-10">
-                             <div class="checkbox">
-                                 <label><input type="checkbox" name="has-juleica" id="edit-activist-hasJuleica" th:field="*{owningJuleica}"/> die Person hat eine JuLeiCa</label>
-                             </div>
-                             <div id="edit-activist-juleica" style="margin-top: 12px;">
-                                 <div class="input-group date datetimepicker" id="edit-activist-juleica-picker">
-                                     <input type="text" class="form-control" name="juleicaExpiryDate" placeholder="JuLeiCa-Ablaufdatum"
-                                         data-toggle="tooltip" data-placement="left" data-title="Format: DD.MM.YYYY" th:field="*{juleicaExpiryDate}"/>
-                                     <span class="input-group-addon">
-                                         <span class="glyphicon glyphicon-calendar"></span>
-                                     </span>
+                     <div id="edit-activist-container">
+                         <div class="form-group">
+                             <label class="col-sm-2 control-label">JuLeiCa</label>
+                             <div class="col-sm-10">
+                                 <div class="checkbox">
+                                     <label><input type="checkbox" name="has-juleica" id="edit-activist-hasJuleica" th:field="*{owningJuleica}"/> die Person hat eine JuLeiCa</label>
                                  </div>
+                                 <div id="edit-activist-juleica" style="margin-top: 12px;">
+                                     <div class="input-group date datetimepicker" id="edit-activist-juleica-picker">
+                                         <input type="text" class="form-control" name="juleicaExpiryDate" placeholder="JuLeiCa-Ablaufdatum"
+                                             data-toggle="tooltip" data-placement="left" data-title="Format: DD.MM.YYYY" th:field="*{juleicaExpiryDate}"/>
+                                         <span class="input-group-addon">
+                                             <span class="glyphicon glyphicon-calendar"></span>
+                                         </span>
+                                     </div>
+                                 </div>
+                             </div>
+                         </div>
+                         <div class="form-group">
+                             <label class="col-sm-2 control-label">Ortsgruppe</label>
+                             <div class="col-sm-10">
+                                 <select class="selectpicker" name="localGroups" data-width="auto" multiple="multiple" th:remove="all-but-first" th:field="*{localGroups}">
+                                     <option th:each="chapter : ${allChapters}" th:text="${chapter.name}" th:value="${chapter.id}">
+                                         NAJU Dresden
+                                     </option>
+                                     <option>
+                                         NAJU Freiberg
+                                     </option>
+                                     <option>
+                                         NAJU Leipzig
+                                     </option>
+                                 </select>
                              </div>
                          </div>
                      </div>
